.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soco-openlap-indicatorengine
  namespace: soco-openlap-indicatorengine
spec:
  selector:
    app: soco-openlap-indicatorengine
  ports:
  - port: 80
